<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingBottom="8dp" />
        <EditText
            android:id="@+id/myName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:paddingBottom="16dp"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:text="@string/toppings"/>

        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium"/>
        <CheckBox
            android:id="@+id/checkChoco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decreaseCoffees"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="#000000"
                android:text="@string/_2" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increaseCoffees"
                android:layout_marginLeft="8dp"
                android:text="+" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:paddingTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/order_summary" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/total_0"
            android:layout_marginBottom="16dp"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:id="@+id/order_btn"
            android:onClick="orderCoffees"
            android:text="ORDER" />
    </LinearLayout>

</ScrollView>
